issue #9 :worked on fixed #1: hidden background image on mobile fixed #2: lazy loading after cube expands

--- a/scss/components/_animations.scss
+++ b/scss/components/_animations.scss
@@ -32,17 +32,42 @@
     transition-delay: 1s !important;
 }
 
-.show {
+ .show {
     opacity: 1;
     filter: blur(0px);
     transition: all 1s;
+
+    #intro {
+
+    .text {
+
+        #poem {
+            opacity: 1;
+            transition-delay: 2s;
+        }
+
+        h1 {
+            animation: pop-in 1s ease-out forwards;
+            animation-delay: 1.5s;
+        }
+
+        .cube-container {
+            animation: pop-in 1s ease-in 2s forwards;
+            animation-delay: 2.5s;
+        }
+
+    }
+}
+
 }
 
 .hiddenLeft {
     @extend .hidden;
+
     @media (orientation:landscape) {
         transform: translateX(-90%);
     }
+
     transition-delay: 0.5s;
 }
 
@@ -54,17 +79,19 @@
 
 .hiddenRight {
     @extend .hidden;
+
     @media (orientation:landscape) {
         transform: translateX(90%);
     }
-    transition-delay: 4s;
-    
+
+    transition-delay: 1;
+
 }
 
 .showRight {
     @extend .show;
     transform: translateX(0%);
-    transition-delay: 4s;
+    transition-delay: 1s;
 }
 
 .hiddenUp {
@@ -82,13 +109,13 @@
 .showDown {
     @extend .show;
     transform: translateY(0%);
-    transition-delay: 2s;
+    transition-delay: 1.5s;
 }
 
 .hiddenDown {
     @extend .hidden;
     transform: translateY(90%);
-    transition-delay: 2s;
+    transition-delay: 1.5s;
 }
 
 .hiddenParent * {
