--- a/scss/components/_cube.scss
+++ b/scss/components/_cube.scss
@@ -9,7 +9,7 @@ $offset: $size * 0.5; */
 
 @media (orientation: portrait) {
   :root {
-    --size: 42vmin !important;
+    --size: 53vmin !important;
   }
 }
 
