--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,7 @@ body {
     font-family: 'Poppins', sans-serif;
     scroll-snap-type: y mandatory;
     overflow: hidden;
-    background-color: white;
+    background-color: black;
 
     #loader {
         position: fixed;
